--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
-    "/js/admin/vendor.js": "/js/admin/vendor.js",
     "/js/admin/app.js": "/js/admin/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/admin/manifest.js": "/js/admin/manifest.js"
+    "/js/index/app.js": "/js/index/app.js"
 }
