--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js?id=c5248ed71609ad11bcf1",
-    "/css/app.css": "/css/app.css?id=8b77a32655e2af70abdc",
-    "/js/index/app.js": "/js/index/app.js?id=5937dc971bbdb4b3b51e"
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/index/app.js": "/js/index/app.js"
 }
