--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "clipboard": "^1.7.1",
     "expose-loader": "^0.7.3",
-    "vue-ueditor": "^0.1.3"
+    "vue-ueditor": "^0.1.3",
+    "vuex": "^3.0.1"
   }
 }
