--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,11 @@
   "presets": [
     ["es2015", { "modules": false }]
   ],
-  "plugins": [["component", [
+  "plugins": [
+    ["component", [
     {
       "libraryName": "element-ui",
       "styleLibraryName": "theme-chalk"
-    }
-  ]]]
+    }]]
+  ]
 }
