--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
+    "node-sass": "^4.7.2",
     "vue": "^2.1.10",
     "vue-router": "^2.1.1"
   },
   "dependencies": {
     "clipboard": "^1.7.1",
     "expose-loader": "^0.7.3",
+    "vue-cookie": "^1.1.4",
     "vue-ueditor": "^0.1.3",
     "vuex": "^3.0.1"
   }
