完成上传文件功能-1.0

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js?id=5821fbd27b00be819b66",
-    "/css/app.css": "/css/app.css?id=8b77a32655e2af70abdc",
-    "/js/index/app.js": "/js/index/app.js?id=d10e5751b6522a5ceba0"
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/index/app.js": "/js/index/app.js"
 }
