--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/index/app.js": "/js/index/app.js"
+    "/js/admin/app.js": "/js/admin/app.js?id=46b8e113212694d5ea6e",
+    "/css/app.css": "/css/app.css?id=8b77a32655e2af70abdc",
+    "/js/index/app.js": "/js/index/app.js?id=d10e5751b6522a5ceba0"
 }
