--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/index/app.js": "/js/index/app.js"
+    "/js/admin/app.js": "/js/admin/app.js?id=27e4a4f5886e1023e452",
+    "/css/app.css": "/css/app.css?id=8b77a32655e2af70abdc",
+    "/js/index/app.js": "/js/index/app.js?id=6f17cb8d26cafc1ebe3a"
 }
