--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.0.0",
+        "aliyuncs/oss-sdk-php": "^2.3",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
