--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^2.1.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "clipboard": "^1.7.1",
     "expose-loader": "^0.7.3",
     "vue-cookie": "^1.1.4",
