实施充值功能过程中，紧急修复记住我登录后刷新session，ajax得不到更新的bug

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ ALIYUN_OSS_ACCESS_KEY_ID=
 ALIYUN_OSS_ACCESS_KEY_SECRET=
 ALIYUN_OSS_ENDPOINT=
 ALIYUN_OSS_BUCKET=
+
+MCB_RECHARGE_KEY=
+MCB_RECHARGE_MD5=
