修改SessionGuard的更新用户session的方法，防止session问题出现

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Aliyun\\":"app/aliyun"
+            "Aliyun\\":"app/aliyun",
+            "Cly\\":"app/cly"
         }
     },
     "autoload-dev": {
