手机版开发到一般，上线充值，注册发放200积分，老用户送积分

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js?id=17e6caf4cb7a4337df45",
+    "/js/admin/app.js": "/js/admin/app.js?id=620dd3c5d75e1524bf2c",
     "/css/app.css": "/css/app.css?id=8b77a32655e2af70abdc",
-    "/js/index/app.js": "/js/index/app.js?id=88d51dba0a94ce083cc2"
+    "/js/index/app.js": "/js/index/app.js?id=2dcc2e4fef0e2d826ac3",
+    "/js/mobile/app.js": "/js/mobile/app.js?id=67d8875adc7468392ffd"
 }
