--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
+        "mobiledetect/mobiledetectlib": "^2.8",
         "predis/predis": "^1.1"
     },
     "require-dev": {
