--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.26.0",
     "clipboard": "^1.7.1",
     "expose-loader": "^0.7.3",
+    "mint-ui": "^2.2.13",
     "vue-cookie": "^1.1.4",
     "vue-ueditor": "^0.1.3",
     "vuex": "^3.0.1"
