--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "element-ui": "^2.0.0",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "node-sass": "^4.7.2",
-    "vue": "^2.1.10",
+    "cross-env": "^5.1.5",
+    "element-ui": "^2.3.9",
+    "jquery": "^3.3.1",
+    "laravel-mix": "^1.7.2",
+    "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
+    "vue": "^2.5.16",
     "vue-router": "^2.1.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "clipboard": "^1.7.1",
-    "expose-loader": "^0.7.3",
+    "expose-loader": "^0.7.5",
+    "jquery-qrcode": "^1.0.0",
     "mint-ui": "^2.2.13",
     "vue-cookie": "^1.1.4",
     "vue-ueditor": "^0.1.3",
