--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
-    "babel-plugin-component": "^0.10.1",
+    "ajv": "^6.5.0",
+    "axios": "^0.18.0",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
+    "clipboard": "^2.0.1",
     "cross-env": "^5.1.5",
     "element-ui": "^2.3.9",
+    "expose-loader": "^0.7.5",
     "jquery": "^3.3.1",
-    "laravel-mix": "^1.7.2",
+    "jquery-qrcode": "^1.0.0",
+    "laravel-mix": "^2.1.11",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "vue": "^2.5.16",
-    "vue-router": "^2.1.1"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "clipboard": "^1.7.1",
-    "expose-loader": "^0.7.5",
-    "jquery-qrcode": "^1.0.0",
-    "mint-ui": "^2.2.13",
     "vue-cookie": "^1.1.4",
+    "vue-router": "^3.0.1",
     "vue-ueditor": "^0.1.3",
     "vuex": "^3.0.1"
-  }
+  },
+  "dependencies": {}
 }
