--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js?id=e6513ceb85a2110c58a9",
-    "/js/admin/app.js": "/js/admin/app.js?id=b19fa67f335162b01a3e",
-    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6",
-    "/js/mobile/app.js": "/js/mobile/app.js?id=3b50dd35e26813498728"
+    "/js/index/app.js": "/js/index/app.js?id=92c8ea6321427fc66d7c",
+    "/js/admin/app.js": "/js/admin/app.js?id=c8991a2c4d86d7ca9c07",
+    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
 }
