增加审核逻辑

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js?id=fec5bfd043f9a4c029fe",
-    "/js/admin/app.js": "/js/admin/app.js?id=e1be91d263dde4287e7a",
-    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
+    "/js/index/app.js": "/js/index/app.js",
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css"
 }
