上个版本忘记压缩js，紧急更新

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js",
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index/app.js": "/js/index/app.js?id=62aaee67e6a73697d8e6",
+    "/js/admin/app.js": "/js/admin/app.js?id=b5475e90d957207745d9",
+    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
 }
