--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "aliyuncs/oss-sdk-php": "^2.3",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
