管理后台上传图片到oss

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ ALIYUN_OSS_ACCESS_KEY_ID=
 ALIYUN_OSS_ACCESS_KEY_SECRET=
 ALIYUN_OSS_ENDPOINT=
 ALIYUN_OSS_BUCKET=
+ALIYUN_OSS_BUCKET_ADMIN=
 
 MCB_RECHARGE_KEY=
 MCB_RECHARGE_MD5=
