--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "laravel-mix": "^2.1.11",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
+    "viewerjs": "^1.1.0",
     "vue": "^2.5.16",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
