user_api做到一半，做了一个全局helper把get_client_ip全局化

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
             "App\\": "app/",
             "Aliyun\\":"app/aliyun",
             "Cly\\":"app/cly"
-        }
+        },
+        "files": [
+            "app/cly/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
