优化查询存在多个会员账号的情况

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js?id=eaef3ea3cc92b54774b6",
-    "/js/admin/app.js": "/js/admin/app.js?id=612be7bb008d9cc7fa3c",
-    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
+    "/js/index/app.js": "/js/index/app.js",
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css"
 }
