--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js",
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index/app.js": "/js/index/app.js?id=dfbde6d2b090aeaad928",
+    "/js/admin/app.js": "/js/admin/app.js?id=612be7bb008d9cc7fa3c",
+    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
 }
