--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
         "mobiledetect/mobiledetectlib": "^2.8",
+        "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
