图片格式错误提示

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js?id=21accb47ded1d2b654f1",
-    "/js/admin/app.js": "/js/admin/app.js?id=95743b8ee36f65f343f2",
-    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
+    "/js/index/app.js": "/js/index/app.js",
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css"
 }
