图片格式错误提示-1.0

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js",
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index/app.js": "/js/index/app.js?id=b8382a146694e299a75b",
+    "/js/admin/app.js": "/js/admin/app.js?id=4fe76af5d245fa110d3a",
+    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
 }
