--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vscode
-/.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
+.idea
+.vscode
+.vagrant
+.DS_Store
