--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mews/captcha": "^2.1",
         "mobiledetect/mobiledetectlib": "^2.8",
         "overtrue/laravel-wechat": "~4.0",
+        "phpoffice/phpspreadsheet": "^1.3",
         "predis/predis": "^1.1"
     },
     "require-dev": {
