--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "^1.3",
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
         "mobiledetect/mobiledetectlib": "^2.8",
