--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/horizon": "^1.3",
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
+        "misterion/ko-process": "^0.5.3",
         "mobiledetect/mobiledetectlib": "^2.8",
         "overtrue/laravel-wechat": "~4.0",
         "phpoffice/phpspreadsheet": "^1.3",
