--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
+        "ipip/datx": "^0.2.0",
         "laravel/framework": "5.5.*",
         "laravel/horizon": "^1.3",
         "laravel/tinker": "~1.0",
