--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js?id=281dd90475c78876d1d1",
-    "/js/admin/app.js": "/js/admin/app.js?id=37dbfcad62f47609aa9c",
-    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
+    "/js/index/app.js": "/js/index/app.js",
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/css/app.css": "/css/app.css"
 }
