增加查询结算的阅读汇总统计和自动任务-1.0

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/index/app.js": "/js/index/app.js",
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index/app.js": "/js/index/app.js?id=281dd90475c78876d1d1",
+    "/js/admin/app.js": "/js/admin/app.js?id=d5ac420c986ce476f910",
+    "/css/app.css": "/css/app.css?id=35d04f066d42389016c6"
 }
