--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "mobiledetect/mobiledetectlib": "^2.8",
         "overtrue/laravel-wechat": "~4.0",
         "phpoffice/phpspreadsheet": "^1.3",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^2.23"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
